# codex-kali-mpc-server

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  dev-requirements.txt  kali_server.py  macOs.sh  package.json  pyproject.toml  registry.yaml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/workflows/: test.yml
config/: policy.yaml
data/: kali_tools.csv  kali_tools.json
docker/: server.yaml  tools.json
docs/: catalog.md  dependency-audit.md  docker-mcp-registry.md  registry-checklist.md
examples/: README.md
scripts/: assert_tool_coverage.py  build_tool_index.py  entrypoint.sh  sync_tools.py  validate_registry_manifest.py
servers/kali-security/: server.yaml  tools.json
src/kali_mcp_server/: __init__.py  catalog.py  dataset.py  executor.py  nvd.py  policy.py  server.py
src/kali_mcp_server/assets/: __init__.py  policy.yaml
tests/: __init__.py  test_dataset.py  test_executor.py  test_nvd.py  test_server_helpers.py  test_tool_dataset.py
tests/integration/: test_run_tool_container.py
