[tool.poetry]
name = "kali-mcp-server"
version = "0.1.0"
description = "Kali Linux Model Context Protocol server"
authors = ["Cbyte Maintainers <maintainers@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
"mcp" = { version = ">=1.2.0", extras = ["cli"] }
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
